--- a/config/config.ini
+++ b/config/config.ini
@@ -17,3 +17,6 @@ Scan_delay: 1
 Google_Maps_API_Key :
 Host: 127.0.0.1
 Port: 5000
+Ignore_Pokemon: [16,19]
+Locations: ["lat1,lon1,name1",
+"lat2,lon2,name2"]
